app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 name: app-deploy
 labels: 
  app: app
spec: 
 replicas: 4
 selector: 
  matchLabels: 
   app: app
 template: 
  metadata: 
   name: app-pod
   labels: 
    app: app
  spec: 
   containers: 
    - name: nginx
      image: nginx.err
