app-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: app-pod
 labels: 
  app: app
spec: 
 containers: 
  - name: nginx
    image: nginx
