pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: app-pod
 namespace: dev
spec: 
 containers: 
  - name: nginx
    image: nginx
    ports: 
     - containerPort: 8080
    command: ["sleep"]
    args: ["60"]
    securityContext: 
     runAsUser: 1010
     capabilities: 
      add: ["MAC_ADMIN"]
    resources: 
     requests: 
      cpu: 100m
      memory: 128Mi
     limits: 
      cpu: 200m
      memory: 256Mi
    readinessProbe: 
     exec: 
      command: 
       - ls
     initialDelaySeconds: 5
     periodSeconds: 5
    livenessProbe: 
     exec: 
      command: 
       - ls
     initialDelaySeconds: 5
     periodSeconds: 5
 restartPolicy: Always
 serviceAccount: dashboard-sa
 tolerations: 
  - key: APP
    operator: Equal
    value: RED
    effect: PreferNoSchedule
 affinity: 
  nodeAffinity: 
   requiredDuringSchedulingIgnoredDuringExecution:
    nodeSelectorTerms: 
     - matchExpressions: 
        - key: NODE
          operator: In
          values: 
           - RED
